[workspace]
resolver = "2"

members = [
    "moveos/metrics",
    "moveos/moveos",
    "moveos/moveos-commons/accumulator",
    "moveos/moveos-commons/bcs_ext",
    "moveos/moveos-commons/moveos-common",
    "moveos/moveos-commons/timeout-join-handler",
    "moveos/moveos-commons/moveos-common",
    "moveos/moveos-compiler",
    "moveos/moveos-config",
    "moveos/moveos-object-runtime",
    "moveos/moveos-store",
    "moveos/moveos-types",
    "moveos/moveos-verifier",
    "moveos/moveos-wasm",
    "moveos/raw-store",
    "moveos/smt",
    "moveos/moveos-eventbus",
    "moveos/moveos-gas-profiling",
    "crates/data_verify",
    "crates/rooch",
    "crates/rooch-benchmarks",
    "crates/rooch-common",
    "crates/rooch-config",
    "crates/rooch-da",
    "crates/rooch-db",
    "crates/rooch-executor",
    "crates/rooch-faucet",
    "crates/rooch-framework-tests",
    "crates/rooch-genesis",
    "crates/rooch-indexer",
    "crates/rooch-integration-test-runner",
    "crates/rooch-key",
    "crates/rooch-open-rpc",
    "crates/rooch-open-rpc-macros",
    "crates/rooch-open-rpc-spec",
    "crates/rooch-open-rpc-spec-builder",
    "crates/rooch-oracle",
    "crates/rooch-pipeline-processor",
    "crates/rooch-proposer",
    "crates/rooch-relayer",
    "crates/rooch-rpc-api",
    "crates/rooch-rpc-client",
    "crates/rooch-rpc-server",
    "crates/rooch-sequencer",
    "crates/rooch-store",
    "crates/rooch-test-transaction-builder",
    "crates/rooch-types",
    "crates/rooch-event",
    "crates/rooch-cosmwasm-vm",
    "crates/testsuite",
    "crates/rooch-ord",
    "frameworks/bitcoin-move",
    "frameworks/framework-builder",
    "frameworks/framework-release",
    "frameworks/framework-types",
    "frameworks/moveos-stdlib",
    "frameworks/rooch-framework",
    "frameworks/rooch-nursery",
]

default-members = [
    "moveos/moveos",
    "frameworks/framework-release",
    "crates/rooch",
    "crates/rooch-faucet",
    "crates/rooch-oracle"
]

exclude = [
    "generator/rust",
]

# All workspace members should inherit these keys
# for package declarations.
[workspace.package]
authors = ["Rooch Contributors <opensource@rooch.network>"]
edition = "2021"
homepage = "https://rooch.network"
license = "Apache-2.0"
publish = false
repository = "https://github.com/rooch-network/rooch"
rust-version = "1.82.0"
version = "0.7.6"

[workspace.dependencies]
# Internal crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
# crates for MoveOS
smt = { path = "moveos/smt" }
moveos-types = { path = "moveos/moveos-types" }
moveos-store = { path = "moveos/moveos-store" }
moveos = { path = "moveos/moveos" }
moveos-common = { path = "moveos/moveos-commons/moveos-common" }
timeout-join-handler = { path = "moveos/moveos-commons/timeout-join-handler" }
moveos-verifier = { path = "moveos/moveos-verifier" }
raw-store = { path = "moveos/raw-store" }
metrics = { path = "moveos/metrics" }
moveos-config = { path = "moveos/moveos-config" }
moveos-wasm = { path = "moveos/moveos-wasm" }
moveos-object-runtime = { path = "moveos/moveos-object-runtime" }
moveos-compiler = { path = "moveos/moveos-compiler" }
moveos-eventbus = { path = "moveos/moveos-eventbus" }
accumulator = { path = "moveos/moveos-commons/accumulator" }
moveos-gas-profiling = { path = "moveos/moveos-gas-profiling" }

# crates for Rooch
rooch = { path = "crates/rooch" }
rooch-common = { path = "crates/rooch-common" }
rooch-key = { path = "crates/rooch-key" }
rooch-types = { path = "crates/rooch-types" }
rooch-framework-tests = { path = "crates/rooch-framework-tests" }
rooch-integration-test-runner = { path = "crates/rooch-integration-test-runner" }
rooch-genesis = { path = "crates/rooch-genesis" }
rooch-relayer = { path = "crates/rooch-relayer" }
rooch-rpc-server = { path = "crates/rooch-rpc-server" }
rooch-rpc-client = { path = "crates/rooch-rpc-client" }
rooch-rpc-api = { path = "crates/rooch-rpc-api" }
rooch-testsuite = { path = "crates/testsuite" }
rooch-config = { path = "crates/rooch-config" }
rooch-sequencer = { path = "crates/rooch-sequencer" }
rooch-executor = { path = "crates/rooch-executor" }
rooch-proposer = { path = "crates/rooch-proposer" }
rooch-pipeline-processor = { path = "crates/rooch-pipeline-processor" }
rooch-open-rpc = { path = "crates/rooch-open-rpc" }
rooch-open-rpc-spec = { path = "crates/rooch-open-rpc-spec" }
rooch-open-rpc-spec-builder = { path = "crates/rooch-open-rpc-spec-builder" }
rooch-open-rpc-macros = { path = "crates/rooch-open-rpc-macros" }
rooch-store = { path = "crates/rooch-store" }
rooch-indexer = { path = "crates/rooch-indexer" }
rooch-da = { path = "crates/rooch-da" }
rooch-benchmarks = { path = "crates/rooch-benchmarks" }
rooch-faucet = { path = "crates/rooch-faucet" }
rooch-test-transaction-builder = { path = "crates/rooch-test-transaction-builder" }
data-verify = { path = "crates/data_verify" }
rooch-db = { path = "crates/rooch-db" }
rooch-event = { path = "crates/rooch-event" }
rooch-ord = { path = "crates/rooch-ord" }
rooch-cosmwasm-vm = { path = "crates/rooch-cosmwasm-vm" }
rooch-oracle = { path = "crates/rooch-oracle" }

# frameworks
framework-types = { path = "frameworks/framework-types" }
framework-builder = { path = "frameworks/framework-builder" }
framework-release = { path = "frameworks/framework-release" }
moveos-stdlib = { path = "frameworks/moveos-stdlib" }
rooch-framework = { path = "frameworks/rooch-framework" }
bitcoin-move = { path = "frameworks/bitcoin-move" }
rooch-nursery = { path = "frameworks/rooch-nursery" }

# External crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
again = "0.1.2"
anyhow = "1.0.76"
async-trait = "0"
backtrace = "0.3"
bcs = "0.1.3"
bytes = "1.8.0"
bech32 = "0.11.0"
better_any = "0.1.1"
bitcoin = { version = "0.32.3", features = ["rand-std", "bitcoinconsensus"] }
bitcoin_hashes = { version = "0.14.0", features = ["serde"] }
bitcoincore-rpc = "0.19.0"
bitcoincore-rpc-json = "0.19.0"
bip32 = "0.4.0"
byteorder = "1.4.3"
clap = { version = "4.5.13", features = ["derive", "env"] }
brotli = "3.4.0"
chrono = "0.4.23"
coerce = "0.8"
datatest-stable = "0.1.3"
derive_builder = "0.20"
derive_more = { version = "1.0.0", features = ["as_ref", "from"] }
dirs = "5.0.1"
enum_dispatch = "^0.3"
ethereum-types = "0.14.1"
ethers = { version = "2.0.7", features = ["legacy"] }
eyre = "0.6.8"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "56f6223b84ada922b6cb2c672c69db2ea3dc6a13" }
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
rustc-hex = "2.1"
itertools = "0.13.0"
jsonrpsee = { version = "0.23.2", features = ["full"] }
jpst = "0.1.1"
lazy_static = "1.5.0"
linked-hash-map = "0.5.6"
log = "0.4.22"
more-asserts = "0.3.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
once_cell = "1.20.2"
ordinals = "0.0.9"
parking_lot = "0.12.3"
pathdiff = "0.2.1"
petgraph = "0.6.5"
primitive-types = { version = "0.12.1", features = ["serde", "arbitrary"] }
prost = "0.12"
prost-types = "0.11"
proptest = "1.5.0"
proptest-derive = "0.3.0"
rayon = "1.5.2"
rand = "0.8.5"
rand_core = { version = "0.6.3", default-features = false }
reqwest = { version = "0.12", features = ["json", "stream"] }
schemars = { version = "0.8.21", features = ["either"] }
serde = { version = "1.0.214", features = ["derive", "rc"] }
serde_bytes = "0.11.15"
serde_json = { version = "1.0.132", features = ["preserve_order"] }
serde_yaml = "0.9"
serde_repr = "0.1"
serde-name = "0.2"
serde_with = { version = "2.1.0", features = ["hex"] }
signature = "2.2.0"
slip10_ed25519 = "0.1.3"
strum = "^0.26"
strum_macros = "^0.26"
sha2 = "0.10.2"
sha3 = "0.10.8"
smallvec = "1.6.1"
thiserror = "1.0.69"
tiny-keccak = { version = "2", features = ["keccak", "sha3"] }
tiny-bip39 = "2.0.0"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = "0.7.12"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tokio-stream = "0.1.16"
tonic = { version = "0.8", features = ["gzip"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.15" }
tungstenite = "0.24.0"
codespan-reporting = "0.11.1"
codespan = "0.11.1"
termcolor = "1.1.2"
versions = "4.1.0"
pretty_assertions = "1.4.1"
syn = { version = "1.0.104", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.89"
derive-syn-parse = "0.1.5"
unescape = "0.1.0"
tempfile = "3.14.0"
regex = "1.11.1"
walkdir = "2.3.3"
prometheus = "0.13.3"
prometheus-http-query = { version = "0.6.6", default_features = false, features = [
    "rustls-tls",
] }
prometheus-parse = { git = "https://github.com/asonnino/prometheus-parser.git", rev = "75334db" }
coarsetime = "0.1.22"
hyper = { version = "1.0.0", features = ["full"] }
num_enum = "0.7.3"
libc = "^0.2"
include_dir = { version = "0.6.2" }
serde-reflection = "0.3.6"
serde-generate = "0.25.1"
bcs-ext = { path = "moveos/moveos-commons/bcs_ext" }
http = "1.0.0"
tower = { version = "0.5.1", features = ["full", "util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5.2", features = ["cors", "full", "trace", "set-header", "propagate-header"] }
tower_governor = "0.4.3"
pin-project = "1.1.7"
mirai-annotations = "1.12.0"
lru = "0.11.0"
bs58 = "0.5.1"
dirs-next = "2.0.0"
anstream = { version = "0.3" }
bigdecimal = { version = "0.3.0", features = ["serde"] }
chacha20poly1305 = "0.10.1"
argon2 = "0.5.2"
rpassword = "7.2.0"
fixed-hash = "0.8.0"
uint = "0.9.5"
rlp = "0.5.2"
const-hex = "1.13.1"
cached = "0.43.0"
diesel = { version = "2.2.4", features = [
    "chrono",
    "sqlite",
    "r2d2",
    "serde_json",
    "64-column-tables",
] }
diesel-derive-enum = { version = "2.1.0", features = ["sqlite"] }
diesel_migrations = { version = "2.2.0" }
axum = { version = "0.7.7", default-features = false, features = [
    "tokio",
    "http1",
    "http2",
    "json",
    "matched-path",
    "original-uri",
    "form",
    "query",
    "ws",
] }
axum-extra = "0.9.3"
axum-server = { version = "0.6.0", default-features = false, features = [
    "tls-rustls",
] }
serenity = { version = "0.12.2", default-features = false, features = [
    "client",
    "gateway",
    "cache",
    "rustls_backend",
    "model",
] }
tap = "1.0.1"
dotenvy = "0.15"
sized-chunks = { version = "0.6" }
dashmap = "6.0.1"
criterion = { version = "0.5.1", features = [
    "async",
    "async_tokio",
    "html_reports",
] }
xxhash-rust = { version = "0.8.11", features = ["std", "xxh3"] }
base64 = "0.22.1"
#criterion-cpu-time = "0.1.0"
wasmer = "4.2.5"
wasmer-types = "4.2.5"
wasmer-compiler-singlepass = "4.2.2"
cosmwasm-vm = { git = "https://github.com/rooch-network/cosmwasm", rev = "597d3e8437d8c4d1afce07e5a676c29c751a8a81" }
cosmwasm-std = { git = "https://github.com/rooch-network/cosmwasm", rev = "597d3e8437d8c4d1afce07e5a676c29c751a8a81" }
ciborium = "0.2.1"
pprof = { version = "0.13.0", features = ["flamegraph", "criterion", "cpp", "frame-pointer", "protobuf-codec"] }
celestia-rpc = { git = "https://github.com/eigerco/celestia-node-rs.git", rev = "129272e8d926b4c7badf27a26dea915323dd6489" }
celestia-types = { git = "https://github.com/eigerco/celestia-node-rs.git", rev = "129272e8d926b4c7badf27a26dea915323dd6489" }
opendal = { version = "0.50.2", features = ["services-fs", "services-gcs"] }
toml = "0.8.19"
tabled = "0.16.0"
csv = "1.3.1"
revm-precompile = "7.0.0"
revm-primitives = "4.0.0"
ord = "0.18.5"
sled = { version = "0.34.7" }
scopeguard = "1.1"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
protobuf = { version = "2.28", features = ["with-bytes"] }
redb = { version = "2.1.1" }
rocksdb = { git = "https://github.com/rooch-network/rust-rocksdb.git", rev = "41d102327ba3cf9a2335d1192e8312c92bc3d6f9", features = ["lz4"] }
lz4 = { version = "1.28.0" }
ripemd = { version = "0.1.3" }
fastcrypto-zkp = { version = "0.1.3" }
function_name = { version = "0.3.0" }
rustc-hash = { version = "2.0.0" }
xorf = { version = "0.11.0" }
vergen-git2 = { version = "1.0.0", features = ["build", "cargo", "rustc"] }
vergen-pretty = "0.3.5"
crossbeam-channel = "0.5.13"
inferno = "0.11.21"
handlebars = "4.2.2"

# Note: the BEGIN and END comments below are required for external tooling. Do not remove.
# BEGIN MOVE DEPENDENCIES
move-abigen = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
move-binary-format = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
move-bytecode-verifier = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
move-bytecode-utils = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
move-cli = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
move-command-line-common = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
move-compiler = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
move-core-types = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
move-coverage = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
move-disassembler = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
move-docgen = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
move-errmapgen = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
move-ir-compiler = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
move-model = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
move-package = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
move-prover = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
move-prover-boogie-backend = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
move-stackless-bytecode = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
move-prover-test-utils = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
move-resource-viewer = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
move-stackless-bytecode-interpreter = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
move-stdlib = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24", features = ["testing"] }
move-symbol-pool = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
#move-table-extension = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
move-transactional-test-runner = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
move-unit-test = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24", features = ["table-extension"] }
move-vm-runtime = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24", features = ["stacktrace", "debugging", "testing"] }
move-vm-test-utils = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24", features = ["table-extension"] }
move-vm-types = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
read-write-set = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
read-write-set-dynamic = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
move-bytecode-source-map = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }
move-ir-types = { git = "https://github.com/rooch-network/move", rev = "e8783853c750d952d277efed937049c0c5a7bb24" }# END MOVE DEPENDENCIES
# keep this for convenient debug Move in local repo
# [patch.'https://github.com/rooch-network/move']
# move-abigen = { path = "../move/language/move-prover/move-abigen" }
# move-binary-format = { path = "../move/language/move-binary-format"  }
# move-bytecode-verifier = { path = "../move/language/move-bytecode-verifier" }
# move-bytecode-utils = { path = "../move/language/tools/move-bytecode-utils" }
# move-cli = { path = "../move/language/tools/move-cli" }
# move-command-line-common = { path = "../move/language/move-command-line-common" }
# move-compiler ={ path = "../move/language/move-compiler" }
# move-core-types = { path = "../move/language/move-core/types"}
# move-coverage = { path = "../move/language/tools/move-coverage" }
# move-disassembler = { path = "../move/language/tools/move-disassembler" }
# move-docgen = { path = "../move/language/move-prover/move-docgen" }
# move-errmapgen = { path = "../move/language/move-prover/move-errmapgen" }
# move-ir-compiler = { path = "../move/language/move-ir-compiler" }
# move-model = { path = "../move/language/move-model" }
# move-package = { path = "../move/language/tools/move-package" }
# move-prover = { path = "../move/language/move-prover" }
# move-prover-boogie-backend = { path = "../move/language/move-prover/boogie-backend" }
# move-stackless-bytecode = { path = "../move/language/move-prover/bytecode" }
# move-prover-test-utils = { path = "../move/language/move-prover/test-utils" }
# move-resource-viewer = { path = "../move/language/tools/move-resource-viewer" }
# move-stackless-bytecode-interpreter = { path = "../move/language/move-prover/interpreter" }
# move-stdlib = { path = "../move/language/move-stdlib", features = ["testing"] }
# move-symbol-pool = { path = "../move/language/move-symbol-pool" }
# #move-table-extension = { path = "../move/language/" }
# move-transactional-test-runner = { path = "../move/language/testing-infra/transactional-test-runner" }
# move-unit-test = { path = "../move/language/tools/move-unit-test", features = ["table-extension"] }
# move-vm-runtime = { path = "../move/language/move-vm/runtime", features = ["stacktrace", "debugging", "testing"] }
# move-vm-test-utils = { path = "../move/language/move-vm/test-utils", features = ["table-extension"] }
# move-vm-types = { path = "../move/language/move-vm/types" }
# read-write-set = { path = "../move/language/tools/read-write-set" }
# read-write-set-dynamic = { path = "../move/language/read-write-set/dynamic" }
# move-bytecode-source-map  = { path = "../move/language/move-ir-compiler/move-bytecode-source-map" }
# move-ir-types = { path = "../move/language/move-ir/types" }

[profile.release]
# enable overflow checks won't affect performance much, branch prediction will handle it well
overflow-checks = true
# enable link-time optimization, which can significantly improve perf but donesn't cost much extra in compile time
# thin LTO is enough for us:
# (https://blog.llvm.org/2016/06/thinlto-scalable-and-incremental-lto.html)
lto = "thin"
codegen-units = 1 # Help to achieve better result with lto

[profile.bench]
inherits = "release"
#debug = true
