[package]
name = "framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
smallvec = { workspace = true }

move-binary-format = { workspace = true }
move-bytecode-utils = { workspace = true }
move-bytecode-verifier = { workspace = true }
move-core-types = { workspace = true }
move-command-line-common = { workspace = true }
move-stdlib = { workspace = true }
move-table-extension = { workspace = true }
move-unit-test = { workspace = true, optional = true }
move-vm-runtime = { workspace = true }
move-vm-test-utils = { workspace = true }
move-vm-types = { workspace = true }
move-package = { workspace = true }
move-prover = { workspace = true }

[dev-dependencies]
mos-integration-test-runner = { workspace = true }
datatest-stable = { workspace = true }

[[test]]
harness = false
name = "tests"