[package]
name = "mos-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bcs = { workspace = true }
thiserror = { workspace = true }
smt = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }

move-core-types = { workspace = true }
move-table-extension = { workspace = true }