[package]
name = "mos"
version = "0.1.0"
edition = "2021"
authors = ["Rooch Contributors <opensource@rooch.network>"]
description = "CLI frontend for the MoveOS"
repository = "https://github.com/rooch-network/moveos"
homepage = "https://rooch.network"
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bcs = { workspace = true }
clap = { features = [ "derive",], workspace = true }
datatest-stable = { workspace = true }
tokio = { features = ["full"], workspace = true }

move-binary-format = { workspace = true }
move-bytecode-verifier = { workspace = true }
move-cli = { workspace = true }
move-command-line-common = { workspace = true }
move-compiler = { workspace = true }
move-core-types = { workspace = true }
move-coverage = { workspace = true }
move-disassembler = { workspace = true }
move-errmapgen = { workspace = true }
move-package = { workspace = true }
move-stdlib = { workspace = true }
move-unit-test = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-test-utils = { workspace = true }

framework = { workspace = true }
