[package]
name = "rooch-account"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
jsonrpsee = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
coerce = { workspace = true }
dirs  = { workspace = true }
once_cell  = { workspace = true }
clap  = { workspace = true }
dirs-next = { workspace = true }
schemars = {workspace = true }
proptest = { optional = true, workspace = true }
proptest-derive = { optional = true, workspace = true }

#anyhow = { workspace = true }
#async-trait = { workspace = true }
#bcs-ext = { package = "bcs-ext", workspace = true }
#futures = { workspace = true }
#parking_lot = { workspace = true }
#rand = { workspace = true }
#rand_core = { default-features = false, workspace = true }
#serde = { workspace = true }
#serde_json = { workspace = true }
#starcoin-account-api = { workspace = true }
#starcoin-config = { workspace = true }
#starcoin-crypto = { workspace = true }
#starcoin-decrypt = { workspace = true }
#starcoin-logger = { workspace = true }
#starcoin-storage = { workspace = true }
#starcoin-types = { workspace = true }

rooch-key = { workspace = true }
rooch-types = { workspace = true }
rooch-config = { workspace = true }

moveos-config = { workspace = true }