[package]
name = "rooch-alloc"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
jemalloc = ["tikv-jemallocator", "tikv-jemalloc-ctl", "tikv-jemalloc-sys"]
# Build jemalloc's profiling features. Without this
# certain profile functions will return nothing.
mem-profiling = ["tikv-jemallocator/profiling"]


[dependencies]
fxhash = "0.2.1"
lazy_static = "1.3"
libc = "0.2"

[dependencies.tikv-jemalloc-ctl]
version = "0.5.0"
optional = true

[dependencies.tikv-jemalloc-sys]
version = "0.5.0"
optional = true
features = ["stats"]

[dependencies.tikv-jemallocator]
version = "0.5.0"
optional = true
features = ["unprefixed_malloc_on_supported_platforms", "stats"]
