[package]
name = "rooch-benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
coerce = { workspace = true }
derive_builder = { workspace = true }
ethers = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
rustc-hex = { workspace = true }
#jsonrpsee = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
thiserror = { workspace = true }
tokio = { features = ["full"], workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
schemars = { workspace = true }
serde_with = { workspace = true }
rand = { workspace = true }
fastcrypto = { workspace = true, features = ["copy_key"] }
hyper = { workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }
rpassword = { workspace = true }

move-core-types = { workspace = true }
move-resource-viewer = { workspace = true }
move-binary-format = { workspace = true }

moveos-store = { workspace = true }
moveos-types = { workspace = true }
move-bytecode-utils = { workspace = true }
raw-store = { workspace = true }
moveos-config = { workspace = true }

rooch-config = { workspace = true }
rooch-types = { workspace = true }
#rooch-executor = { workspace = true }
#rooch-sequencer = { workspace = true }
#rooch-proposer = { workspace = true }
rooch-key = { workspace = true }
rooch-store = { workspace = true }
rooch-rpc-api = { workspace = true }

criterion = { workspace = true }
parking_lot = { workspace = true }
proptest = { workspace = true }
rand_core = { default-features = false, workspace = true }
#futures-timer = { workspace = true }


#starcoin-crypto = { package = "starcoin-crypto", workspace = true }
#forkable-jellyfish-merkle = { workspace = true }
#futures-timer = { workspace = true }
#starcoin-logger = { package = "starcoin-logger", workspace = true }
#starcoin-account-api = { workspace = true }
#starcoin-accumulator = { package = "starcoin-accumulator", workspace = true }
#starcoin-chain = { workspace = true }
#starcoin-config = { workspace = true }
#starcoin-consensus = { workspace = true }
#starcoin-executor = { package = "starcoin-executor", workspace = true }
#starcoin-genesis = { workspace = true }
#network-api = { workspace = true }
#starcoin-service-registry = { workspace = true }
#starcoin-state-store-api = { workspace = true }
#starcoin-state-tree = { workspace = true }
#starcoin-storage = { workspace = true }
#starcoin-transaction-builder = { workspace = true }
#starcoin-vm-runtime = { workspace = true }
#starcoin-vm-types = { workspace = true }
#starcoin-types = { workspace = true }
#starcoin-executor-benchmark = { workspace = true }

[dev-dependencies]

[lib]
bench = false

[[bench]]
harness = false
name = "bench_storage"

[[bench]]
harness = false
name = "bench_chain"

[[bench]]
harness = false
name = "bench_state_tree"

[[bench]]
harness = false
name = "bench_vm"

[target."cfg(target_os=\"linux\")".dependencies]
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }