[package]
name = "rooch-benchmarks"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
coerce = { workspace = true }
derive_builder = { workspace = true }
ethers = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
rustc-hex = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
thiserror = { workspace = true }
tokio = { features = ["full"], workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
schemars = { workspace = true }
serde_with = { workspace = true }
rand = { workspace = true }
fastcrypto = { workspace = true, features = ["copy_key"] }
hyper = { workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }
rpassword = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }
pprof = { workspace = true, features = ["flamegraph", "criterion", "cpp", "frame-pointer", "protobuf-codec"] }
parking_lot = { workspace = true }
proptest = { workspace = true }
rand_core = { default-features = false, workspace = true }
bitcoincore-rpc-json = { workspace = true }
bitcoin = { workspace = true }
toml = { workspace = true }

move-core-types = { workspace = true }
move-resource-viewer = { workspace = true }
move-binary-format = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-types = { workspace = true }

moveos = { workspace = true }
moveos-store = { workspace = true }
moveos-types = { workspace = true }
move-bytecode-utils = { workspace = true }
raw-store = { workspace = true }
moveos-config = { workspace = true }

rooch-config = { workspace = true }
rooch-types = { workspace = true }
rooch-executor = { workspace = true }
rooch-sequencer = { workspace = true }
rooch-proposer = { workspace = true }
rooch-key = { workspace = true }
rooch-store = { workspace = true }
rooch-rpc-api = { workspace = true }
rooch-relayer = { workspace = true }
rooch-indexer = { workspace = true }
rooch-pipeline-processor = { workspace = true }
rooch-da = { workspace = true }
rooch-rpc-server = { workspace = true }
rooch-test-transaction-builder = { workspace = true }
rooch-framework = { workspace = true }
rooch-framework-tests = { workspace = true }
rooch-genesis = { workspace = true }

[dev-dependencies]

[lib]
bench = false

[[bench]]
harness = false
name = "bench_utils"

[[bench]]
harness = false
name = "bench_tx_validate"

[[bench]]
harness = false
name = "bench_tx_sequence"

[[bench]]
harness = false
name = "bench_tx_exec"
