[package]
name = "rooch-benchmarks"

# Workspace inherited keys
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
anyhow-old = { git = "https://github.com/dtolnay/anyhow", tag = "1.0.76", package = "anyhow" }
anyhow-new = { git = "https://github.com/dtolnay/anyhow", tag = "1.0.93", package = "anyhow" }
bcs = { workspace = true }
clap = { workspace = true }
ethers = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }
criterion = { workspace = true }
pprof = { workspace = true, features = ["flamegraph", "criterion", "cpp", "frame-pointer", "protobuf-codec"] }
bitcoincore-rpc-json = { workspace = true }
bitcoincore-rpc = { workspace = true }
bitcoin = { workspace = true }
toml = { workspace = true }
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5.4", features = ["unprefixed_malloc_on_supported_platforms", "profiling"] }
prometheus = { workspace = true }
tokio = { workspace = true }

move-core-types = { workspace = true }
move-resource-viewer = { workspace = true }
move-binary-format = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-types = { workspace = true }

moveos = { workspace = true }
moveos-store = { workspace = true }
moveos-types = { workspace = true }
move-bytecode-utils = { workspace = true }
raw-store = { workspace = true }
moveos-config = { workspace = true }
smt = { workspace = true }
metrics = { workspace = true }

rooch-config = { workspace = true }
rooch-types = { workspace = true }
rooch-executor = { workspace = true }
rooch-sequencer = { workspace = true }
rooch-proposer = { workspace = true }
rooch-key = { workspace = true }
rooch-store = { workspace = true }
rooch-rpc-api = { workspace = true }
rooch-relayer = { workspace = true }
rooch-indexer = { workspace = true }
rooch-pipeline-processor = { workspace = true }
rooch-da = { workspace = true }
rooch-rpc-server = { workspace = true }
rooch-test-transaction-builder = { workspace = true }
rooch-framework = { workspace = true }
rooch-framework-tests = { workspace = true }
rooch-genesis = { workspace = true }

[dev-dependencies]

[lib]
bench = false

[[bench]]
harness = false
name = "bench_utils"

[[bench]]
harness = false
name = "bench_tx_validate"

[[bench]]
harness = false
name = "bench_tx_sequence"

[[bench]]
harness = false
name = "bench_tx_exec"

[[bench]]
harness = false
name = "bench_smt"

[[bench]]
harness = false
name = "bench_indexer"