[package]
name = "rooch-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_with = { workspace = true }
jsonrpsee = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
coerce = { workspace = true }
dirs  = { workspace = true }
once_cell  = { workspace = true }
clap  = { workspace = true }

rooch-key = { workspace = true }
rooch-types = { workspace = true }
