[package]
name = "rooch-config"

# Workspace inherited keys
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
once_cell = { workspace = true }
clap = { workspace = true }
dirs-next = { workspace = true }
celestia-types = { workspace = true }
hex = { workspace = true }
opendal = { workspace = true }

rooch-types = { workspace = true }
moveos-config = { workspace = true }
moveos-types = { workspace = true }
