[package]
name = "rooch-da"

# Workspace inherited keys
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
celestia-rpc = { workspace = true }
celestia-types = { workspace = true }

moveos-types = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
bcs = { workspace = true }
tracing = { workspace = true }
coerce = { workspace = true }
async-trait = { workspace = true }
opendal = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }

rooch-config = { workspace = true }
rooch-types = { workspace = true }
rooch-store = { workspace = true }

