[package]
name = "rooch-da"

# Workspace inherited keys
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { workspace = true }
celestia-types = { workspace = true }
celestia-rpc = { workspace = true }
moveos-types = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
coerce = { workspace = true }
async-trait = { workspace = true }
opendal = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }

rooch-config = { workspace = true }
rooch-types = { workspace = true }
rooch-store = { workspace = true }

